testsuite/tests/backpack/should_fail/bkpfail06.bkp
unit p where
    signature H where
        data T = T Int
unit q where
    module T where
        data T = T Bool
    module H(T(..)) where
        import T
    include p
